packages/components/bolt-modal/src/modal.scss
@import '@bolt/core-v3.x';
@import '@bolt/global/styles/06-themes/_themes.all.scss'; // @todo: remove this once bolt-theme() function is completely deprecated and removed.
@import '@bolt/global/styles/00-vars/_vars-mode.scss';

/* ------------------------------------ *\
   Modal
   ---
   Based originally off of
   https://github.com/edenspiekermann/a11y-dialog
   before heavy modifications
   and customizations
\* ------------------------------------ */

$bolt-modal-overlay-bg-color-dark: var(--bolt-color-navy-xdark);
$bolt-modal-overlay-bg-color-light: var(--bolt-color-white);
$bolt-modal-border-width: $bolt-border-width;
$bolt-modal-border-style: $bolt-border-style;
$bolt-modal-border-color: var(--m-bolt-border);
$bolt-modal-border-radius: bolt-border-radius(small);
$bolt-modal-max-height: 80vh;
$bolt-modal-transition: $bolt-transition;
$bolt-modal-breakpoint: 'small';
$bolt-modal-animation-scale: 0.95;

// Hide all the non-trigger (button / link, etc) content inside the <bolt-modal> container before the JS kicks in
bolt-modal:not([ready]) {
  display: none;
}

.c-bolt-modal {
  @include bolt-z-index(modal);

  display: block;
  opacity: bolt-opacity(0);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%; // Use % instead of vh or modal scrollbar is hidden behind bold scrollbar in IE11
  height: 100vh;
  // [Mai] reset font styles here so it doesn't inherit from parent container.
  font-family: var(--bolt-type-font-family-body);
  font-size: var(--bolt-type-font-size-medium);
  font-weight: var(--bolt-type-font-weight-regular);
  line-height: var(--bolt-type-line-height-medium);
  pointer-events: none;
  transition: opacity $bolt-modal-transition;
  overflow-x: hidden;
  overflow-y: hidden;

  &.is-open {
    opacity: bolt-opacity(100);
    cursor: pointer;
    pointer-events: auto;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;

    &.is-persistent {
      cursor: default;
    }
  }

  @include bolt-mq($until: $bolt-modal-breakpoint) {
    visibility: hidden;
    opacity: bolt-opacity(0);
    transition: opacity $bolt-modal-transition;

    [class*='t-bolt-'] {
      color: var(--bolt-color-black);
      background-color: var(--bolt-color-white);
    }

    .c-bolt-modal__overlay {
      display: none;
    }

    .c-bolt-modal__content {
      width: 100%;
    }

    .c-bolt-modal__container {
      display: flex;
      flex-direction: column;
      height: 100vh;
      color: var(--bolt-color-black);
      background-color: var(--bolt-color-white);
    }

    .c-bolt-modal__container-header {
      flex-shrink: 0; // If header text is missing, this will partially collapse without setting flex-shrink
      padding: var(--bolt-spacing-y-small) var(--bolt-spacing-x-large)
        var(--bolt-spacing-y-small) var(--bolt-spacing-x-small);
    }

    .c-bolt-modal__container-header--hidden {
      height: calc(
        var(--bolt-spacing-y-medium) + var(--bolt-spacing-y-small) * 2
      ); // Match close button icon size and margin.
      padding: 0;
    }

    .c-bolt-modal__container-body {
      flex: auto;
      margin-top: auto;
      margin-bottom: auto;

      overflow-y: auto;
      -webkit-overflow-scrolling: touch;

      // This only works in Light DOM, which is fine because we're targeting IE11
      > .is-first-child {
        @include bolt-ie11-only {
          align-items: flex-start;
        }
      }
    }

    .c-bolt-modal__container-footer {
      padding: var(--bolt-spacing-y-small) var(--bolt-spacing-x-small);
    }

    [class*='c-bolt-modal__container--spacing-'] {
      .c-bolt-modal__container-body {
        padding: var(--bolt-spacing-y-small) var(--bolt-spacing-x-small);
      }
    }

    &.is-open {
      visibility: visible;
      opacity: bolt-opacity(100);
    }
  }
}

// Overlay color options
.c-bolt-modal:before {
  content: '';
  opacity: 0.8;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
}

.c-bolt-modal:before,
.c-bolt-modal--overlay-dark:before {
  @include bolt-mq($bolt-modal-breakpoint) {
    background-color: $bolt-modal-overlay-bg-color-dark;
  }
}

.c-bolt-modal--overlay-light:before {
  @include bolt-mq($bolt-modal-breakpoint) {
    background-color: $bolt-modal-overlay-bg-color-light;
  }
}

// Content box
.c-bolt-modal__content {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  background: transparent;

  @include bolt-mq($bolt-modal-breakpoint) {
    visibility: hidden;
    position: fixed;
    top: 0;
    left: 0;
    min-width: 200px; // Prevents content without defined width (such as image and video) from falling below 200px.
    max-width: calc(100% - var(--bolt-spacing-x-medium) * 2);
    max-height: $bolt-modal-max-height;
    transition: visibility $bolt-transition-timing $bolt-transition-ease
      $bolt-transition-timing;
  }

  @at-root .c-bolt-modal.is-open #{&} {
    cursor: auto;

    @include bolt-mq($bolt-modal-breakpoint) {
      visibility: visible;
      transition: visibility 0s $bolt-transition-ease 0s;
    }
  }
}
/* ... */

